--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
+<!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <title>Learn D3JS</title>
-    </head>
+<body bgcolor="#AED6F1">
 
-    <body>
+<h1><center>CS498 Data Visualization Final Project</center></h1>
 
-        <h1>First heading</h1>
 
-        <script src="https://d3js.org/d3.v4.min.js"></script>
-        <script src="index.js"></script>
-    </body>
+
+
+</body>
 </html>
