--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <script>
 
-          chart("/Users/dipakpatel/dataviz/data.csv", "orange");
+          chart("data.csv", "orange");
           
           var datearray = [];
           var colorrange = [];
