--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                       .attr("x", width)
                       .attr("y", -6)
                       .style("text-anchor", "end")
-                      .text("Conntributions");
+                      .text("Contributions");
                 
                 //   // y-axis
                   svg.append("g")
