fixing line in second chart

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
 
-    <title>CS498-Data Visualization Final Project</title>
+    <title>CS498 Data Visualization Final Project</title>
 
     <!-- Required stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
