--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                     svg.append("g")
               
                         .attr("transform", "translate(0," + height + ")")
+                        .attr("class", "x axis")
                         .call(xAxis)
                         .append("text")
                         .attr("class", "label")
