adding url after stylesheet

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head lang="en">
 
     <title>CS498 Data Visualization Final Project</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
-    <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
 
 
     <!-- Required stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+    <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
+    <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js" language="JavaScript"></script>
 
 
 
@@ -17,7 +20,7 @@
 
 <body>
 
-        <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js" language="JavaScript"></script>
+     
     <div class="slideshow-container">
 
         <div class="mySlides fade">
