--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                     }())
                 </script>
 
-<p style="font-size:150%;">This is a bar-chart for percentage number of deaths in different states in U.S.A.</p> 
+<p style="font-size:150%;">This is a bar-chart for number of deaths in different states of U.S.A </p> 
     
 
         </div>
