--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
                     }())
                 </script>
 
-<p style="font-size:150%;">This is a bar-chart for number of deaths in different states of U.S.A </p> 
+<p style="font-size:150%;">This is a bar-chart for number of deaths in different states of U.S.A. The highest number of deaths by state can be
+    viewed by using the sort button </p> 
     
 
         </div>
