--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <!-- Required stylesheet -->
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
 
     <script src="http://d3js.org/d3.v3.min.js" language="JavaScript"></script>
     <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js" language="JavaScript"></script>
